# pxt-rradio

./: Makefile  README.md  _history  main.blocks  main.py  package-lock.json  pxt.json  pyproject.toml  test.ts
.copilot/: todo.md
docs/: reduce.md  relay.md
pxt-src/: README.md  botcmd.ts  botstate.ts  display.ts  joystick.ts  negotiate.ts  radiop.ts  relay.ts
src/: README.md  botcmd.ts  botstate.ts  display.ts  lib.ts  negotiate.ts  radiop.ts  relay.ts
src/rradio/: __init__.py  packet.py  packets.csv  peerdb.py  rrserial.py
test/: test.ts  test_relay.py
