[project]
name = "rradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric.busboom@jointheleague.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rradio = "rradio:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
